--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ document.addEventListener("deviceready",function(){
 
 					$.ajax({
 						type:"POST",
-						url:"http://charlyxaar.esy.es/guardar.phpguardarAct.php",
+						url:"http://charlyxaar.esy.es/guardarAct.php",
 						data:"id="+id+"&nomb="+nom+"&clav="+clave+"&prec="+p+"&existen="+e+"&prov="+provee,
 						success: exeGuardarAct
 					});
