--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@ document.addEventListener("deviceready",function(){
     </div>
     <div data-role="footer">
     	<p>Pie de página</p>
+    	<font color="#24AAFF">
+      Carlos Alfredo Morales Pérez
+</font>
+<font color="red">
+     Num. Control 12940077*
+</font>
     </div>
 </div>
 
