--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@ document.addEventListener("deviceready",function(){
     </div>
     <div data-role="footer" data-position="fixed">
     	<p>Pie de aplicación</p>
+    	<font color="red">
+     Maria Dula Camacho Camacho
+</font>
     </div>
 </div>
 
@@ -224,11 +227,9 @@ document.addEventListener("deviceready",function(){
     </div>
     <div data-role="footer">
     	<p>Pie de página</p>
-    	<font color="#24AAFF">
-      Carlos Alfredo Morales Pérez
-</font>
+  
 <font color="red">
-     Num. Control 12940077*
+     Maria Dula Camacho Camacho
 </font>
     </div>
 </div>
@@ -246,6 +247,9 @@ document.addEventListener("deviceready",function(){
     </div>
     <div data-role="footer">
     	<p>Pie de página</p>
+    	<font color="red">
+     Maria Dula Camacho Camacho
+</font>
     </div>
 </div>
 
@@ -261,6 +265,9 @@ document.addEventListener("deviceready",function(){
     </div>
     <div data-role="footer">
     	<p>Pie de página</p>
+    	<font color="red">
+     Maria Dula Camacho Camacho
+</font>
     </div>
 </div>
 
@@ -278,6 +285,9 @@ document.addEventListener("deviceready",function(){
     </div>
     <div data-role="footer">
     	<p>Pie de página</p>
+    	<font color="red">
+     Maria Dula Camacho Camacho
+</font>
     </div>
 </div>
 </body>
