--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ document.addEventListener("deviceready",function(){
     <div data-role="footer" data-position="fixed">
     	<p>Pie de aplicación</p>
     	<font color="red">
-     Maria Dula Camacho Camacho
+    Hector Aguilar Degante
 </font>
     </div>
 </div>
@@ -229,7 +229,7 @@ document.addEventListener("deviceready",function(){
     	<p>Pie de página</p>
   
 <font color="red">
-     Maria Dula Camacho Camacho
+     Hector Aguilar Degante
 </font>
     </div>
 </div>
@@ -248,7 +248,7 @@ document.addEventListener("deviceready",function(){
     <div data-role="footer">
     	<p>Pie de página</p>
     	<font color="red">
-     Maria Dula Camacho Camacho
+     Hector Aguilar Degante
 </font>
     </div>
 </div>
@@ -266,7 +266,7 @@ document.addEventListener("deviceready",function(){
     <div data-role="footer">
     	<p>Pie de página</p>
     	<font color="red">
-     Maria Dula Camacho Camacho
+     Hector Aguilar Degante
 </font>
     </div>
 </div>
@@ -286,7 +286,7 @@ document.addEventListener("deviceready",function(){
     <div data-role="footer">
     	<p>Pie de página</p>
     	<font color="red">
-     Maria Dula Camacho Camacho
+    Hector Aguilar Degante
 </font>
     </div>
 </div>
