--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@ document.addEventListener("deviceready",function(){
     </div>
     <div data-role="footer" data-position="fixed">
     	<p>Pie de aplicación</p>
-    	<font color="red">
-    Hector Aguilar Degante
+    	<font color="blue" align="center">
+    Maria Dula Camacho Camacho
 </font>
     </div>
 </div>
@@ -228,8 +228,8 @@ document.addEventListener("deviceready",function(){
     <div data-role="footer">
     	<p>Pie de página</p>
   
-<font color="red">
-     Hector Aguilar Degante
+	<font color="blue" align="center">
+    Maria Dula Camacho Camacho
 </font>
     </div>
 </div>
@@ -247,8 +247,8 @@ document.addEventListener("deviceready",function(){
     </div>
     <div data-role="footer">
     	<p>Pie de página</p>
-    	<font color="red">
-     Hector Aguilar Degante
+    		<font color="blue" align="center">
+    Maria Dula Camacho Camacho
 </font>
     </div>
 </div>
@@ -265,8 +265,8 @@ document.addEventListener("deviceready",function(){
     </div>
     <div data-role="footer">
     	<p>Pie de página</p>
-    	<font color="red">
-     Hector Aguilar Degante
+    	<font color="blue" align="center">
+    Maria Dula Camacho Camacho
 </font>
     </div>
 </div>
@@ -285,8 +285,8 @@ document.addEventListener("deviceready",function(){
     </div>
     <div data-role="footer">
     	<p>Pie de página</p>
-    	<font color="red">
-    Hector Aguilar Degante
+    		<font color="blue" align="center">
+    Maria Dula Camacho Camacho
 </font>
     </div>
 </div>
